<resources>
    <string name="app_name">Joe Mama\'s Pizza</string>
    <string name="title_menu">Меню</string>
    <string name="title_profile">Профиль</string>
    <string name="title_contacts">Контакты</string>
    <string name="title_cart">Корзина</string>
    <string name="title_bar_cart">Ваша корзина</string>
    <string name="title_about">О приложении</string>

    <string name="about_text"><b>Версия 0.1</b></string>
    <string name="text_contacts">ilya.sereda2002@mail.ru</string>
    <string name="text_about_contact">Свяжитесь с нами в любое время, и мы будем рады ответить на ваши вопросы</string>
    <string name="about_app">О приложении</string>
    <string name="text_profile">Авторизируйтесь, чтобы получать персональные предолжения</string>
    <string name="text_profile_desc">Сделаем подарок на день рождения, сохраним адрес доставки и расскажем об акциях</string>
    <string name="text_profile_registration">Регистрация</string>
    <string name="text_profile_auth">Войти</string>
    <string name="login_telephone_number">Введите номер телефона</string>

    <string name="powered_by">Powered by Ilya Sereda</string>

    <string name="no_items_in_cart_text">Ваша корзина пуста, добавьте понравившийся товар из “Меню”.</string>
    <string name="cart_empty_oops">Ой, пусто!</string>
    <string name="profile_hello">Здравствуйте, Имя!</string>
    <string name="profile_number">+7 (800) 555-35-35</string>
    <string name="order_history_text">История заказов</string>
    <string name="delivery_addresses_text">Адреса доставки</string>
    <string name="name">Имя</string>
    <string name="update_info">Сохранить изменения</string>
    <string name="email">Электронная почта</string>
    <string name="profile_edit_name">Имя</string>
    <string name="profile_edit_number">Телефон</string>
    <string name="profile_edit_email">Электронная почта</string>
    <string name="profile_edit_birthdate">Дата рождения</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="edit_address_btn_text">Изменить адрес</string>
    <string name="address_text">г. Москва</string>
    <string name="add_address">Добавить адрес доставки</string>
    <string name="delivery_address">Адрес доставки</string>
    <string name="logout_text">Выйти из профиля</string>
    <string name="order_delivery">Доставка</string>
    <string name="order_position">Заказанные позиции</string>
    <string name="order_sum">Сумма заказа</string>
    <string name="order_repeat">Повторить заказ</string>
    <string name="registration_title">Вы наш новый пользователь! Заполните данные о себе</string>
    <string name="registration_desc">Вы сможете посмотреть историю заказов, сохранять адреса доставки и многое другое</string>
    <string name="register_account">Зарегистрироваться</string>
    <string name="confirmation_continue">Продолжить</string>
    <string name="confirmation_text">Код из СМС</string>
    <string name="confirmation_edit_text">Введите код из СМС</string>
    <string name="confirmation_title">Теперь введите код из СМС</string>
    <string name="confirmation_desc">Код отправлен сообщением на введенный номер телефона</string>
    <string name="text_continue">Продолжить</string>
    <string name="text_order">Оформить заказ</string>
    <string name="addresses_empty">Список адресов пуст</string>
    <string name="ship_to_error_empty">Пожалуйста, выберите адрес для доставки!</string>
    <string name="edit_btn_text">Изменить</string>
    <string name="add_address_street_title_text">Город, улица/проспект, дом</string>
    <string name="add_address_btn_text">Сохранить</string>
    <string name="address">Адрес</string>
    <string name="floor">Этаж</string>
    <string name="apartment">Квартира</string>
    <string name="entrance">Подъезд</string>
    <string name="intercom">Домофон</string>
    <string name="comment">Комментарий к заказу</string>
    <string name="orders_empty">Вы еще ни разу не делали заказ в нашей пиццерии :(</string>
    <string name="profile_edit_day">День</string>
    <string name="profile_edit_month">Месяц</string>
    <string name="profile_edit_age">Год</string>
    <string name="birthdate_desc">Введите дату рождения</string>
    <string name="text_loading">Загрузка…</string>
    <string name="code_verify_error_text">Неверный код!</string>
    <string name="text_check_code">Проверить</string>
    <string name="success_label">Успешно</string>
    <string name="order_success_desc">Спасибо за заказ!</string>
    <string name="redirect_home_timer">Перенаправление на домашнюю страницу через</string>
    <string name="back_to_home_text">Вернуться на домашнюю страницу</string>
    <string name="menu_pizza">Пицца</string>
    <string name="menu_hot_appetizers">Горячие закуски</string>
    <string name="menu_drinks">Напитки</string>
    <string name="add_product_to_cart_text">Добавить в корзину</string>

    <string name="verification_complete">Проверка прошла успешно</string>
    <string name="verification_failed_try_again">Проверка не прошла, повторите еще раз</string>
    <string name="quota_exceeded">Превышен запрос СМС, попробуйте позже</string>
    <string name="code_sent">СМС отправлено</string>
    <string name="phone_auth_success">Проверка прошла успешно</string>
    <string name="invalid_code">Неверный код из СМС</string>
    <string name="code_will_be_sent">СМС с кодом будет выслано</string>
    <string name="invalid_phone_number">Неверный номер телефона</string>
    <string name="title_menu_desc">Подробнее о продукте</string>
    <string name="text_go_for_order">Перейти в меню</string>

    <string name="title_activity_login">Вход в профиль</string>
    <string name="title_activity_registration">Регистрация в приложении</string>
    <string name="title_activity_confirmation">Подтверждение номера телефона</string>
    <string name="addresses_empty_desc">Перейдите в профиль и добавьте адрес доставки</string>


</resources>