<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_navigation"
    app:startDestination="@id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.ilyamarvin.pizzamobileapp.ui.fragments.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
        <action
            android:id="@+id/action_navigation_profile_to_deliveryAddressesFragment"
            app:destination="@id/deliveryAddressesFragment" />
        <action
            android:id="@+id/action_navigation_profile_to_orderHistoryFragment"
            app:destination="@id/orderHistoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.ilyamarvin.pizzamobileapp.ui.fragments.profile.EditProfileFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/deliveryAddressesFragment"
        android:name="com.ilyamarvin.pizzamobileapp.ui.fragments.profile.address.AddressesFragment"
        android:label="@string/delivery_addresses_text"
        tools:layout="@layout/fragment_addresses">
        <action
            android:id="@+id/action_deliveryAddressesFragment_to_addEditAddressFragment"
            app:destination="@id/addEditAddressFragment" />
    </fragment>

    <fragment
        android:id="@+id/orderHistoryFragment"
        android:name="com.ilyamarvin.pizzamobileapp.ui.fragments.profile.OrderHistoryFragment"
        android:label="@string/order_history_text"
        tools:layout="@layout/fragment_order_history" />

    <fragment
        android:id="@+id/addEditAddressFragment"
        android:name="com.ilyamarvin.pizzamobileapp.ui.fragments.profile.address.AddEditAddressFragment"
        android:label="@string/delivery_address"
        tools:layout="@layout/fragment_add_edit_address">

        <argument
            android:name="addressId"
            app:argType="integer" />

    </fragment>

</navigation>