<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageview_profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/text_profile"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:text="@string/text_profile"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_telephone_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/login_telephone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_profile_auth"
            android:layout_width="270dp"
            android:layout_height="58dp"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:text="@string/text_profile_auth"
            android:textStyle="bold"
            app:cornerRadius="40dp" />

        <TextView
            android:id="@+id/text_profile_desc"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:text="@string/text_profile_desc"
            android:textAlignment="center"
            android:textSize="12sp" />


    </LinearLayout>

</ScrollView>